// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FolderCard /> checks fiveImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c19 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c17 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c16 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  pointer-events: none;
  width: 48.5%;
  height: 67px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c9:nth-child(-n + 3) {
  width: 48.5%;
  height: 76px;
}

.c9:nth-child(n + 3) {
  width: 32%;
  height: 56px;
  margin-top: 5px;
}

.c10 {
  display: block;
  position: relative;
  display: inline-block;
  width: 32%;
  height: 56px;
}

.c10 .c8 {
  margin-top: 5px;
  width: 100%;
  height: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c12 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c20 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <div
        className="c10"
      >
        <img
          className="c8 c9"
          src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
        />
      </div>
    </div>
    <div
      className="c11"
    >
      <span
        className="c4 c12"
      >
        Hiking Experience
      </span>
      <div
        className="c13"
      >
        <span
          className="c4 c14"
        >
          5
           files
        </span>
        <button
          className="c15 c16 c17"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c18 c19"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks fourImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c15 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c14 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  pointer-events: none;
  width: 48.5%;
  height: 67px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c8:nth-child(n + 3) {
  margin-top: 5px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c10 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c18 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
    </div>
    <div
      className="c9"
    >
      <span
        className="c4 c10"
      >
        Hiking Experience
      </span>
      <div
        className="c11"
      >
        <span
          className="c4 c12"
        >
          4
           files
        </span>
        <button
          className="c13 c14 c15"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c16 c17"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks more than fiveImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c19 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c20 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c18 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c17 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  pointer-events: none;
  width: 48.5%;
  height: 67px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c9:nth-child(n + 3) {
  width: 32%;
  height: 56px;
  margin-top: 5px;
}

.c9:nth-child(-n + 2) {
  width: 48.6%;
  height: 76px;
}

.c10 {
  display: block;
  position: relative;
  display: inline-block;
  width: 32%;
  height: 56px;
}

.c10 .c8 {
  margin-top: 5px;
  width: 100%;
  height: 100%;
}

.c11 {
  display: block;
  position: absolute;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,15,0.7);
  top: 5px;
  left: 0;
  width: 100%;
  height: 100%;
}

.c11:before {
  content: '+2';
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c13 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c15 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c21 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <div
        className="c10"
      >
        <img
          className="c8 c9"
          src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
        />
        <span
          className="c4 c11"
        />
      </div>
    </div>
    <div
      className="c12"
    >
      <span
        className="c4 c13"
      >
        Hiking Experience
      </span>
      <div
        className="c14"
      >
        <span
          className="c4 c15"
        >
          7
           files
        </span>
        <button
          className="c16 c17 c18"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c19 c20"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks oneImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c15 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c14 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  pointer-events: none;
  width: 100%;
  height: 137px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c10 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c18 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
    </div>
    <div
      className="c9"
    >
      <span
        className="c4 c10"
      >
        Hiking Experience
      </span>
      <div
        className="c11"
      >
        <span
          className="c4 c12"
        >
          1
           files
        </span>
        <button
          className="c13 c14 c15"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c16 c17"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks selected Folder UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c16 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c19:hover .c15 {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c15 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  pointer-events: none;
  width: 48.5%;
  height: 67px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c9:nth-child(3) {
  width: 100%;
  margin-top: 5px;
}

.c20 .c8 {
  margin-top: 5px;
  width: 100%;
  height: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c11 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 5px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c21 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  selected={true}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    selected={true}
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8 c9"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
    </div>
    <div
      className="c10"
    >
      <span
        className="c4 c11"
      >
        Hiking Experience
      </span>
      <div
        className="c12"
      >
        <span
          className="c4 c13"
        >
          3
           files
        </span>
        <button
          className="c14 c15 c16"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c17 c18"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks threeImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c15 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c14 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  pointer-events: none;
  width: 48.5%;
  height: 67px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c8:nth-child(3) {
  width: 100%;
  margin-top: 5px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c10 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c18 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
    </div>
    <div
      className="c9"
    >
      <span
        className="c4 c10"
      >
        Hiking Experience
      </span>
      <div
        className="c11"
      >
        <span
          className="c4 c12"
        >
          3
           files
        </span>
        <button
          className="c13 c14 c15"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c16 c17"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FolderCard /> checks twoImage UI 1`] = `
.c4 {
  pointer-events: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  font-family: 'FontAwesome' !important;
  font-size: 35px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c16 {
  font-family: 'FontAwesome' !important;
  font-size: 12px;
  margin: 0px;
  padding: 0px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17 {
  font-size: 12px;
  display: block;
  padding-right: 0;
  padding-left: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13 {
  direction: ltr;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background: none;
  background-color: transparent;
  width: auto;
  height: auto;
  border-radius: 0px;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: transparent;
}

.c3 {
  margin-top: -14px;
}

.c5 {
  text-align: center;
  margin-top: 7px;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 19;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.28);
}

.c1::after {
  content: '';
  position: absolute;
  width: 23px;
  height: 9px;
  top: 0;
  left: 111px;
  background-color: #263c75;
}

.c15 {
  margin: 10px 2px 0 0;
  padding-right: 0px;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: pointer;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  min-width: 100%;
  padding-left: 9px;
  padding-right: 9px;
  padding-bottom: 14px;
  padding-top: 9px;
  margin-top: 0;
  border-radius: 0 7px 7px 7px;
  box-shadow: 0 0 0 3px transparent;
  z-index: 17;
}

.c6::after {
  content: '';
  display: inline-block;
  position: absolute;
  box-shadow: -3px -2px 0 1px transparent;
  z-index: -1;
  top: -8px;
  left: 111px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 20px;
  height: 12px;
}

.c6::before {
  z-index: 0;
  box-shadow: -2px -3px 0 1px transparent;
  content: '';
  display: inline-block;
  position: absolute;
  top: -14px;
  left: 0px;
  width: 118px;
  height: 14px;
  border-radius: 7px 0 0 0;
}

.c6:hover .c14 {
  display: block;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 138px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  pointer-events: none;
  width: 48.5%;
  height: 137px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  object-fit: cover;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin: 0 0 0 2px;
  height: 20px;
}

.c10 {
  white-space: nowrap;
  margin: 8px 0 0 2px;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
  outline: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c12 {
  outline: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 8px 2px 0 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 255px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 15px;
  padding: 0;
  background-color: transparent;
  border-radius: 0px;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 250ms;
  -webkit-transition: transform 250ms;
  transition: transform 250ms;
  pointer-events: auto;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c18 {
  visibility: visible !important;
}

@media (max-width:1140px) {
  .c0 {
    width: 255px;
  }
}

<div
  className="c0"
  onMouseDown={[Function]}
  width={255}
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
      fontSize="35px"
    >
      
    </span>
    <span
      className="c4 c5"
    >
      Add to Folder
    </span>
  </div>
  <div
    className="c6"
    width={255}
  >
    <div
      className="c7"
    >
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
      <img
        className="c8"
        src="Colleagues_looking_at_information_on_mobile_phone_screen_Videos_Mixkit.png"
      />
    </div>
    <div
      className="c9"
    >
      <span
        className="c4 c10"
      >
        Hiking Experience
      </span>
      <div
        className="c11"
      >
        <span
          className="c4 c12"
        >
          2
           files
        </span>
        <button
          className="c13 c14 c15"
          height="auto"
          radius="0px"
          width="auto"
        >
          <span
            className="c16 c17"
            fontSize="12px"
          >
            
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
